# krisp

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  Reflection.md  compile.sh  conan_clang_profile  conanfile.py  hot_reload.sh  meson.build  quick_run.sh  readme.md  reflection.md  setup-env.sh  shader_compiler.sh
applications/benchmark/: CMakeLists.txt
applications/chess/: CMakeLists.txt  meson.build
applications/rts/: CMakeLists.txt
applications/tetris/: CMakeLists.txt  meson.build  piece.hpp  tetris.cpp
shaders/: meson.build
shaders/raytracing_shaders/: raytracing_common.glsl
shared_lib/: CMakeLists.txt  meson.build
shared_lib/src/: shared_library.cpp  shared_library.hpp
src/: analytics.cpp  analytics.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  constants.hpp  entity_deletion_queue.hpp  experimental.cpp  experimental.hpp  game_engine.cpp  game_engine.hpp  game_engine.ipp  game_engine_callbacks.cpp  game_engine_callbacks.ipp  graphics_engine.cpp  graphics_engine.hpp  graphics_engine_base_module.cpp  graphics_engine_buffers.cpp  graphics_engine_command_buffer.cpp  graphics_engine_descriptors.cpp  graphics_engine_device.cpp  graphics_engine_frame_buffers.cpp  graphics_engine_graphics_pipeline.cpp  graphics_engine_image_views.cpp  graphics_engine_swap_chain.cpp  graphics_engine_texture.cpp  graphics_engine_texture.hpp  graphics_engine_validation_layer.cpp  graphics_engine_validation_layer.hpp  hot_reload.cpp  hot_reload.hpp  iapplication.hpp  id_systems.hpp  identifications.hpp  input.cpp  input.hpp  input.ipp  iwindow_callbacks.hpp  main.cpp  (+28 more)
src/animations/: animator.cpp  animator.hpp
src/audio_engine/: SoundBuffer.cpp  SoundBuffer.hpp  SoundDevice.hpp  audio_engine.cpp  audio_engine.hpp  audio_engine_pimpl.cpp  audio_engine_pimpl.hpp  audio_source.cpp  audio_source.hpp  listener.cpp  listener.hpp  openal_include.hpp
src/collision/: bounding_box.cpp  bounding_box.hpp  collider.cpp  collider.hpp  collision_detector.cpp  collision_detector.hpp  mesh_bvh.cpp  mesh_bvh.hpp
src/entity_component_system/: animation.cpp  animation.hpp  animation_system.cpp  animation_system.hpp  clickable.cpp  clickable.hpp  collider_ecs.cpp  collider_ecs.hpp  common.hpp  ecs.cpp  ecs.hpp  ecs_component.hpp  ecs_manager.cpp  ecs_manager.hpp  hoverable.cpp  hoverable.hpp  light_source.cpp  light_source.hpp  material_system.hpp  mesh_system.hpp  particle_system.cpp  particle_system.hpp  skeletal.cpp  skeletal.hpp  skeletal_serialization.cpp  tile_system.cpp  tile_system.hpp
src/experimental/: experimental.cpp  experimental.hpp
src/game_engine/: object_interfaces_menagerie.hpp
src/game_objects/: README.md  character.cpp  character.hpp  player_character.cpp  player_character.hpp
src/graphics_engine/: README.md  constants.hpp  engine_base.hpp  engine_commands_handler.cpp  engine_commands_handler.ipp  graphics_engine.cpp  graphics_engine.hpp  graphics_engine.ipp  graphics_engine_base_module.cpp  graphics_engine_base_module.hpp  graphics_engine_base_module.ipp  graphics_engine_buffers.cpp  graphics_engine_buffers.ipp  graphics_engine_command_buffer.cpp  graphics_engine_commands.cpp  graphics_engine_commands.hpp  graphics_engine_depth_buffer.cpp  graphics_engine_depth_buffer.hpp  graphics_engine_depth_buffer.ipp  graphics_engine_descriptors.cpp  graphics_engine_device.cpp  graphics_engine_device.hpp  graphics_engine_device.ipp  graphics_engine_frame.cpp  graphics_engine_frame.hpp  graphics_engine_frame.ipp  graphics_engine_frame_buffers.cpp  graphics_engine_graphics_pipeline.cpp  graphics_engine_gui.cpp  graphics_engine_gui.hpp  graphics_engine_gui_manager.cpp  graphics_engine_gui_manager.hpp  graphics_engine_gui_manager.ipp  graphics_engine_image_views.cpp  graphics_engine_instance.cpp  graphics_engine_instance.hpp  graphics_engine_instance.ipp  graphics_engine_model_loader.cpp  graphics_engine_model_loader.hpp  graphics_engine_object.cpp  (+31 more)
src/gui/: gui.cpp  gui.hpp  gui_manager.cpp  gui_manager.hpp  gui_windows.cpp  gui_windows.hpp  gui_windows.ipp
src/interface/: gizmo.cpp  gizmo.hpp  gizmo.ipp  objects.cpp  objects.hpp
src/materials/: materials.cpp  materials.hpp
src/objects/: cubemap.cpp  cubemap.hpp  generic_objects.hpp  light_source.cpp  light_source.hpp  object.cpp  object.hpp  object_id.hpp  objects.cpp  objects.hpp  tracker.hpp
src/renderable/: design.plantuml  material.hpp  material_factory.cpp  material_factory.hpp  material_group.cpp  material_group.hpp  mesh.hpp  mesh_factory.cpp  mesh_factory.hpp  mesh_maths.cpp  mesh_maths.hpp  render_types.hpp  renderable.cpp  renderable.hpp
src/resource_loader/: resource_loader.cpp  resource_loader.hpp  resource_loader_animation.ipp  resource_loader_material.ipp  resource_loader_mesh.ipp
src/serialization/: README.md  resource_provenance.cpp  resource_provenance.hpp  serialization_helpers.hpp  serializer.cpp  serializer.hpp
src/shaders/: compile.sh  fragment_shader.glsl  vertex_shader.glsl
src/shapes/: shape.cpp  shape.hpp  shape_factory.cpp  shape_factory.hpp  shape_id.hpp  shapes.cpp  shapes.hpp
src/simulations/: simulation.cpp  simulation.hpp  tower_of_hanoi.cpp  tower_of_hanoi.hpp
test/: CMakeLists.txt  audio_engine_tests.cpp  camera_tests.cpp  clickable_ecs_tests.cpp  collider_tests.cpp  common_tests.cpp  ecs_serialization_tests.cpp  game_engine_tests.cpp  game_objects_tests.cpp  graphics_buffer_tests.cpp  graphics_settings_tests.cpp  gui_panel_tests.cpp  math_tests.cpp  mesh_factory_tests.cpp  mesh_tests.cpp  meson.build  mock_graphics_engine.hpp  mock_window.hpp  object_tests.cpp  orbital_physics_tests.cpp  resource_loader_tests.cpp  save_file_store_tests.cpp  scale_gizmo_tests.cpp  serializer_tests.cpp  simple_test_model.gltf  skeletal_ecs_tests.gltf  test_helper.hpp  test_main.cpp  tile_system_tests.cpp
test/data/: import_variants.gltf  multi_mesh_multi_primitive.gltf  normal_map_without_base_color.gltf  normal_mapped_authored_tangents.gltf  normal_mapped_invalid_tangents.gltf  normal_mapped_missing_tangents.gltf  normal_mapped_shared_material.gltf  (+10 more)
(+150 files in other folders)
